# fedpredict

./: .gitlab-ci.yml  404.html  CNAME  LICENSE  README.md  astro.config.mjs  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  submit.sh
.github/workflows/: astro.yml  python-publish.yml
about/: index.html
api_reference_tf/: index.html
api_reference_torch/: index.html
clean/: index.html
components/: index.html
docs/: about.md  components.md  flower_fedpredict.md  hello_fedpredict.md  index.md  installation.md  projects.md  quick_start.md  why_fedpredict.md
docs/javascripts/: splash.js
examples/FedPredict+Flower+Pytorch/: pyproject.toml
examples/FedPredict+Flower+Pytorch/pytorch_fedpredict_example/: task.py
examples/FedPredict-in-20-minutes/: tutorial.ipynb
examples/FedPredict_Flower_Pytorch/: README.md  pyproject.toml
examples/FedPredict_Flower_Pytorch/pytorch_fedpredict_example/: __init__.py  client_app.py  server_app.py
examples/FedPredict_Flower_Pytorch/pytorch_fedpredict_example/clients/: fedavg_client.py  fedavg_fp_client.py
examples/FedPredict_NVFlare_Flower_Pytorch/flower_pt_tb/: pyproject.toml
examples/FedPredict_NVFlare_Flower_Pytorch/flower_pt_tb/flower_pt_tb/: task.py
fedpredict/: __init__.py  fedpredict.py  fedpredict_core.py  fedpredict_torch.py  test_fedpredict.py
fedpredict/utils/: utils.py
fedpredict/utils/compression_methods/: fedkd.py  parameters_svd.py  quantization.py  sparsification.py
flower_fedpredict/: index.html
hello_fedpredict/: index.html
installation/: index.html
javascripts/: splash.js
projects/: index.html
quick_start/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/about/: index.html
site/search/: search_index.json
stylesheets/: extra.css  splash.css
why_fedpredict/: index.html
